# telegaram-server-API

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_api.py  setup.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: cleanup.ps1
src/: __init__.py
src/api/: __init__.py  config.py  main.py
src/api/routes/: auth.py  contacts.py  groups.py  notes.py  runs.py  sessions.py
src/api/schemas/: auth.py  common.py  contacts.py  groups.py  notes.py  runs.py  sessions.py
src/api/services/: __init__.py  browser_runner.py  job_manager.py
src/telegram_bot/: __init__.py  browser.py  contacts.py  groups.py  login.py  session.py  utils.py
src/telegram_bot/browser/: __init__.py  browser_adapter.py  enhanced_browser.py
src/telegram_bot/notes/: __init__.py  notes_manager.py
src/telegram_bot/reporting/: __init__.py  report_generator.py
src/telegram_bot/telemetry/: __init__.py  tracer.py
